# cg-thirdparty

./: .gitignore  .gitmodules  2_boost_build.cmd  3_prebuild.cmd  CMakeLists.txt  CMake_XTensor_Stack.cmake  README.md  _build_for_curdir.cmd  _build_for_module.cmd  _build_for_module_no_install.cmd  boost_extract.cmd  generate_submodule.py  prebuild.cmd  prebuild_SyclParallelSTL.cmd  prebuild_Xtensor.cmd  submodulelist.txt  update_submodules.py
_preinstall/: _build_for_module_no_install.cmd  boost_build.cmd  prebuild.cmd  readme.md
